--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Canya - Community Services & Resources</title>
     <link rel="stylesheet" href="/styles.css">
     <link rel="icon" href="/images/favicon.svg" type="image/svg+xml">
+    <link rel="" href="./js/ld.js">
 </head>
 <body>
     <header>
@@ -68,7 +69,7 @@
             </div>
         </section>
 
-        <section class="container">
+        <section class="container" id="featured-links-frame">
             <h2>Featured Resources</h2>
             <p>Check out some of the amazing organizations we're connected with:</p>
             <div id="featured-links" class="grid"></div>
