--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <main>
         <section class="hero">
             <div class="hero-media">
-                <img src="https://images.unsplash.com/photo-1501785888041-af3ef285b470?auto=format&fit=crop&w=1600&q=80" alt="Forest trees" />
+                <img src="https://images.unsplash.com/photo-1593113598332-cd288d649433?auto=format&fit=crop&w=2400&q=80" alt="People helping at soup kitchen" />
                 <div class="hero-text-overlay">
                     <h1><img src="/images/canya-logo.svg" alt="Canya" class="inline-logo"></h1>
                 </div>
