Added LaunchDarkly status page
Added a page for my connection to LaunchDarkly

--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -63,6 +63,14 @@
                 </div>
             </div>
         </section>
+
+        <section class="container">
+            <h2>System Status</h2>
+            <p>
+                View our <a href="/launchdarkly" style="color: #007bff; text-decoration: underline;">LaunchDarkly Status Page</a> 
+                to see real-time feature flag information and SDK connection status.
+            </p>
+        </section>
     </main>
 
     <footer>
