Updated button for Light and Dark
updated the README also and the theme switch

--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -6,6 +6,7 @@
     <title>Login - Canya Admin</title>
     <link rel="stylesheet" href="/styles.css">
     <link rel="icon" href="/images/favicon.svg" type="image/svg+xml">
+    <script src="/js/theme.js"></script>
     <style>
         .login-container {
             max-width: 400px;
@@ -29,6 +30,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/services">Services</a></li>
                 <li><a href="/about">About Us</a></li>
+                <li><button id="theme-toggle" class="theme-toggle" aria-label="Toggle theme" title="Toggle theme">☀️</button></li>
             </ul>
         </nav>
     </header>
