--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -6,6 +6,7 @@
     <title>My Profile - Canya</title>
     <link rel="stylesheet" href="/styles.css">
     <link rel="icon" href="/images/favicon.svg" type="image/svg+xml">
+    <script src="/js/theme.js"></script>
     <style>
         .profile-container {
             max-width: 600px;
@@ -144,6 +145,7 @@
             <ul class="nav-links">
                 <li><a href="/">Home</a></li>
                 <li><a href="/profile" style="color: white; font-weight: bold;">My Profile</a></li>
+                <li><button id="theme-toggle" class="theme-toggle" aria-label="Toggle theme" title="Toggle theme">☀️</button></li>
                 <li><a href="/admin" class="admin-link">Dashboard</a></li>
                 <li><a href="#" onclick="logout()" class="admin-link">Logout</a></li>
             </ul>
