--- a/public/404.html
+++ b/public/404.html
@@ -6,6 +6,7 @@
     <title>404 - Page Not Found</title>
     <link rel="stylesheet" href="/styles.css">
     <link rel="icon" href="/images/favicon.svg" type="image/svg+xml">
+    <script src="/js/theme.js"></script>
     <style>
         .error-container {
             text-align: center;
@@ -32,6 +33,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/services">Services</a></li>
                 <li><a href="/about">About Us</a></li>
+                <li><button id="theme-toggle" class="theme-toggle" aria-label="Toggle theme" title="Toggle theme">☀️</button></li>
             </ul>
         </nav>
     </header>
