--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Canya - Community Services & Resources</title>
     <link rel="stylesheet" href="/styles.css">
     <link rel="icon" href="/images/favicon.svg" type="image/svg+xml">
+    <script src="/js/theme.js"></script>
     <script type="module" src="/js/ld.js"></script>
     <script type="module" src="/js/chatbot.js"></script>
 </head>
@@ -18,6 +19,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/services">Services</a></li>
                 <li><a href="/about">About Us</a></li>
+                <li><button id="theme-toggle" class="theme-toggle" aria-label="Toggle theme" title="Toggle theme">☀️</button></li>
                 <li><a href="#" onclick="checkUserLogin()" class="admin-link">Account</a></li>
             </ul>
         </nav>
