--- a/public/pages/admin.html
+++ b/public/pages/admin.html
@@ -6,6 +6,7 @@
     <title>Admin Dashboard - Canya</title>
     <link rel="stylesheet" href="/styles.css">
     <link rel="icon" href="/images/favicon.svg" type="image/svg+xml">
+    <script src="/js/theme.js"></script>
     <style>
         .admin-container {
             display: grid;
@@ -217,6 +218,7 @@
             <a href="/" class="logo"><img src="/images/canya-logo.svg" alt="Canya logo" class="site-logo"></a>
             <ul class="nav-links">
                 <li><a href="/">Home</a></li>
+                <li><button id="theme-toggle" class="theme-toggle" aria-label="Toggle theme" title="Toggle theme">☀️</button></li>
                 <li><a href="#" onclick="logout()" class="admin-link">Logout</a></li>
             </ul>
         </nav>
