--- a/public/pages/services.html
+++ b/public/pages/services.html
@@ -6,6 +6,7 @@
     <title>Services - Canya</title>
     <link rel="stylesheet" href="/styles.css">
     <link rel="icon" href="/images/favicon.svg" type="image/svg+xml">
+    <script src="/js/theme.js"></script>
 </head>
 <body>
     <header>
@@ -15,6 +16,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/services">Services</a></li>
                 <li><a href="/about">About Us</a></li>
+                <li><button id="theme-toggle" class="theme-toggle" aria-label="Toggle theme" title="Toggle theme">☀️</button></li>
                 <li><a href="/login" class="admin-link">Admin Login</a></li>
             </ul>
         </nav>
