--- a/public/pages/launchdarkly.html
+++ b/public/pages/launchdarkly.html
@@ -195,24 +195,48 @@
         }
 
         .refresh-button {
-            background: var(--btn-primary-bg);
-            color: var(--btn-primary-text);
-            border: none;
+            background: rgba(255, 255, 255, 0.15);
+            color: var(--text);
+            border: 1.5px solid rgba(255, 255, 255, 0.3);
             padding: 8px 16px;
-            border-radius: 4px;
+            border-radius: 0.5rem;
             cursor: pointer;
             font-weight: 600;
-            transition: background 0.2s;
+            transition: all 0.3s ease;
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+        }
+
+        [data-theme="light"] .refresh-button {
+            background: rgba(0, 123, 255, 0.15);
+            border-color: rgba(0, 123, 255, 0.3);
+            color: #0056b3;
+            box-shadow: 0 8px 32px rgba(0, 123, 255, 0.05);
         }
 
         .refresh-button:hover {
-            background: var(--btn-primary-hover-bg);
-            color: var(--btn-primary-hover-text);
+            background: rgba(255, 255, 255, 0.25);
+            border-color: rgba(255, 255, 255, 0.5);
+            transform: translateY(-2px);
+            box-shadow: 0 12px 40px rgba(255, 255, 255, 0.15);
+            backdrop-filter: blur(12px);
+            -webkit-backdrop-filter: blur(12px);
+        }
+
+        [data-theme="light"] .refresh-button:hover {
+            background: rgba(0, 123, 255, 0.25);
+            border-color: rgba(0, 123, 255, 0.5);
+            color: #004085;
+            box-shadow: 0 12px 40px rgba(0, 123, 255, 0.2);
         }
 
         .refresh-button:disabled {
-            background: var(--secondary);
+            background: var(--bg-card);
+            border-color: var(--border-light);
+            color: var(--secondary);
             cursor: not-allowed;
+            opacity: 0.5;
         }
 
         h1 {
